Changelog for plone.portlet.static

    (name of developer listed in brackets)

plone.portlet.static - 1.0b1 Unreleased

    - Changed the i18n domain to `plone`.
      [hannosch]

    - Initial package structure.
      [zopeskel]
