@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<portlets>
+<portlets
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    i18n:domain="plone">
  
  <!-- Portlet type registrations -->
  
@@ -7,6 +9,8 @@
    addview="plone.portlet.static.Static"
    title="Static text portlet"
    description="A portlet which can display static HTML text"
+   i18n:attributes="title title_static_portlet;
+                    description description_static_portlet"
    />
  
 </portlets>
