@@ -4,6 +4,9 @@ Changelog for plone.portlet.static
 
 plone.portlet.static - 1.0b1 Unreleased
 
+    - Added missing i18n markup to portlets.xml.
+      [hannosch]
+
     - Changed the i18n domain to `plone`.
       [hannosch]
 
